--- a/Neo4j-UI/src/app/screens/home/home.component.html
+++ b/Neo4j-UI/src/app/screens/home/home.component.html
@@ -17,7 +17,7 @@
   </table>
 </div>
 <div class="card-body">
-  <h3>top 10 recommendations by user</h3>
+  <h3>top 10 recommendations by {{userId}}</h3>
   <table class="table table-striped">
     <thead>
     <tr>
